add swagger/openapi resources and docs
